@@ -172,7 +172,9 @@ public class CoolBarManager extends ContributionManager implements
 
         // Cycle through the current list looking for duplicates.
         IContributionItem[] currentItems = getItems();
-        for (IContributionItem currentItem : currentItems) {
+        for (int i = 0; i < currentItems.length; i++) {
+            IContributionItem currentItem = currentItems[i];
+
             // We ignore null entries.
             if (currentItem == null) {
                 continue;
@@ -254,12 +256,12 @@ public class CoolBarManager extends ContributionManager implements
             coolBar = null;
         }
         IContributionItem[] items = getItems();
-        for (IContributionItem item : items) {
+        for (int i = 0; i < items.length; i++) {
             // Disposes of the contribution item.
             // If Contribution Item is a toolbar then it will dispose of
             // all the nested
             // contribution items.
-            item.dispose();
+            items[i].dispose();
         }
         // If a context menu existed then dispose of it.
         if (contextMenuManager != null) {
@@ -309,7 +311,8 @@ public class CoolBarManager extends ContributionManager implements
 			return null;
 		}
 
-        for (CoolItem coolItem : items) {
+        for (int i = 0; i < items.length; i++) {
+            CoolItem coolItem = items[i];
             IContributionItem data = (IContributionItem) coolItem.getData();
             if (data != null && data.equals(item)) {
 				return coolItem;
@@ -385,8 +388,8 @@ public class CoolBarManager extends ContributionManager implements
     private ArrayList<IContributionItem> getItemList() {
         IContributionItem[] cbItems = getItems();
         ArrayList<IContributionItem> list = new ArrayList<>(cbItems.length);
-        for (IContributionItem cbItem : cbItems) {
-            list.add(cbItem);
+        for (int i = 0; i < cbItems.length; i++) {
+            list.add(cbItems[i]);
         }
         return list;
     }
@@ -591,7 +594,7 @@ public class CoolBarManager extends ContributionManager implements
                 IContributionItem cbItem = rowIterator
                         .next();
                 if (displayedItems.contains(cbItem)) {
-					existingVisibleRows.add(Integer.valueOf(numRow));
+                    existingVisibleRows.add(new Integer(numRow));
                     break;
                 }
                 if (cbItem.isSeparator()) {
@@ -621,7 +624,7 @@ public class CoolBarManager extends ContributionManager implements
                     row++;
                 }
             } else {
-				itemLocation.put(item, Integer.valueOf(row));
+                itemLocation.put(item, new Integer(row));
             }
 
         }
@@ -767,8 +770,8 @@ public class CoolBarManager extends ContributionManager implements
         // dispose of all the cool items on the cool bar manager
         if (coolBar != null) {
             CoolItem[] coolItems = coolBar.getItems();
-            for (CoolItem coolItem : coolItems) {
-                dispose(coolItem);
+            for (int i = 0; i < coolItems.length; i++) {
+                dispose(coolItems[i]);
             }
         }
         // Set the internal structure to this order
@@ -818,7 +821,8 @@ public class CoolBarManager extends ContributionManager implements
              */
             final IContributionItem[] items = getItems();
             final List<IContributionItem> visibleItems = new ArrayList<>(items.length);
-            for (final IContributionItem item : items) {
+            for (int i = 0; i < items.length; i++) {
+                final IContributionItem item = items[i];
                 if (isChildVisible(item)) {
                     visibleItems.add(item);
                 }
@@ -831,13 +835,13 @@ public class CoolBarManager extends ContributionManager implements
              */
             CoolItem[] coolItems = coolBar.getItems();
             final ArrayList<CoolItem> coolItemsToRemove = new ArrayList<>(coolItems.length);
-            for (CoolItem coolItem : coolItems) {
-                final Object data = coolItem.getData();
+            for (int i = 0; i < coolItems.length; i++) {
+                final Object data = coolItems[i].getData();
                 if ((data == null)
                         || (!visibleItems.contains(data))
                         || ((data instanceof IContributionItem) && ((IContributionItem) data)
                                 .isDynamic())) {
-                    coolItemsToRemove.add(coolItem);
+                    coolItemsToRemove.add(coolItems[i]);
                 }
             }
 
@@ -926,7 +930,8 @@ public class CoolBarManager extends ContributionManager implements
             updateWrapIndices();
 
             // Update the sizes.
-            for (IContributionItem item : items) {
+            for (int i = 0; i < items.length; i++) {
+                IContributionItem item = items[i];
                 item.update(SIZE);
             }
 
@@ -985,7 +990,8 @@ public class CoolBarManager extends ContributionManager implements
         int j = 0;
         CoolItem[] coolItems = (coolBar == null) ? null : coolBar.getItems();
 
-		for (IContributionItem item : items) {
+        for (int i = 0; i < items.length; i++) {
+            IContributionItem item = items[i];
             CoolItem coolItem = findCoolItem(coolItems, item);
             if (item.isSeparator()) {
                 foundSeparator = true;
